# handspring

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-21-handspring-v02-pose.md  2026-04-21-handspring-v03-motion-expressions.md  2026-04-21-handspring-v04-synth.md  2026-04-21-handspring-v05-jarvis.md  2026-04-21-handspring-v1.md  2026-04-23-flick-commit-radial.md
docs/superpowers/specs/: 2026-04-21-handspring-v02-pose.md  2026-04-21-handspring-v03-motion-expressions.md  2026-04-21-handspring-v04-synth.md  2026-04-21-handspring-v05-jarvis.md  2026-04-21-handspring-v051-refinements.md  2026-04-21-handspring-v052-pinch-viz.md  2026-04-21-handspring-v053-create-preview.md  2026-04-21-handspring-v054-pinch-threshold.md  2026-04-21-handspring-v055-optimize-resize.md  2026-04-21-handspring-v1-design.md  2026-04-23-flick-commit-radial-design.md  (+1 more)
examples/: tone_synth.py
src/handspring/: __init__.py  __main__.py  app_mode.py  config.py  desktop_controller.py  expressions.py  features.py  gestures.py  history.py  jarvis.py  motion.py  os_control.py  osc_out.py  overlay.py  preview.py  settings_server.py  synth.py  synth_app.py  synth_params.py  synth_ui.py  tracker.py  tutorial.py  types.py  web_server.py
tests/: fixtures.py  test_app_mode.py  test_config.py  test_desktop_controller.py  test_expressions.py  test_features.py  test_gestures.py  test_history.py  test_jarvis.py  test_motion.py  test_osc_out.py  test_synth_params.py  test_synth_ui.py  test_tutorial.py  test_types.py
web/: index.html
