[project]
name = "handspring"
version = "0.3.0"
description = "Webcam gesture → OSC stream for creative coding"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "handspring contributors" }]
dependencies = [
    "mediapipe>=0.10,<0.11",
    "opencv-python>=4.10,<5",
    "python-osc>=1.8,<2",
    "numpy>=1.26,<3",
    "sounddevice>=0.4,<0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[project.scripts]
handspring = "handspring.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/handspring"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RET"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
